# TiPhone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resource/images/: brightness.c  calculator.c  calendar.c  camera.c  dashboard.c  fileview.c  hdmiin.c  health.c  key.c  led.c  linkman.c  music.c  notepad.c  pcba.c  photoview.c  player.c  printbrush.c  reader.c  recorder.c  reminders.c  settings.c  slideshow.c  udpchat.c  weather.c
src/: init.c  init.h  lv_conf.h  main.c
src/components/: components.h
src/components/dock/: dock.c  dock.h
systemd/: TiPhone.service
